fixed product page and footer

--- a/EcomProj2022/style.css
+++ b/EcomProj2022/style.css
@@ -46,7 +46,7 @@ p{
 }
 
 .container {
-    max-width: 1300px;
+    max-width: 1000px;
     margin: auto;
     padding-left: 25px;
     padding-right: 25px;
@@ -75,6 +75,12 @@ p{
     font-size: 20px;
     }
 
+  .webName {
+      margin-left: auto;
+      margin-right: auto;
+      width: 900px;
+  }
+
 .subheading {
     display: flex;
     flex-wrap: wrap;
@@ -84,10 +90,10 @@ p{
 }
 
 .logo{
-   height:110px;
-   width:110px;
-   padding: 5px;
-   margin-bottom: 20px;
+   min-width:150;
+   height:144px;
+   padding: 1px;
+   margin-bottom: 0px;
 }
 
 .btn {
@@ -108,7 +114,9 @@ p{
     height: 320px; 
 }
 
-.header .row{
+
+
+ .row{
     display:flex;
 }
 
@@ -155,19 +163,23 @@ p{
 
 .deal-img{
     float:left;
+    padding: 10px;
+    margin-right:auto
 }
 
 .deal{
-    background: radial-gradient(#fff, #ffd6d6);
-    margin-top:80px;
+    background: radial-gradient(#fff, #d6f7ff);
+    margin-top:10px;
     margin-left: 20px;
     padding: 30px 0;
 }
 
+
+
 .column2{
     float: left;
-    min-width: 190px;
-    margin-bottom: 20px;
+    min-width: 200px;
+    max-height:600px;
 }
 
 /* footer */
@@ -175,22 +187,25 @@ p{
 .footer{
     background: black;
     color: #8a8a8a;
-    font-size:14px;
+    font-size:13px;
     padding: 60px 0 20px;
 }
 
 .footer p{
-    color: #8a8a8a;
+    color: lightgrey;
+    min-width: 10;
 }
 
 .footer h3{
-    color: #fff;
+    font-size: 20;
+    color: white;
     margin-bottom: 20px;   
+    min-width: 10;
 }
 
 .footerColumn1, .footerColumn2, .footerColumn3 {
     min-width: 150px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .footerColumn1{
@@ -198,10 +213,14 @@ p{
 }
 
 .footerColumn2{
-    flex: 1;
+    flex:auto;
+    padding:0;
+    margin-right: 15%;
     text-align: center;
 }
 
 .footerColumn3{
     flex-basis: 30%;
+    text-align: right;
+    float: right;
 }
