--- a/style.css
+++ b/style.css
@@ -91,8 +91,8 @@ p{
 }
 
 .logo{
-   min-width:150;
-   height:144px;
+   min-width:140px;
+   max-height:144px;
    padding: 1px;
    margin-bottom: 0px;
 }
