--- a/EcomProj2022/style.css
+++ b/EcomProj2022/style.css
@@ -1,342 +1,85 @@
-*{
-    overflow: auto;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cricket Supply | Ecom Website</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="<link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,500&display=swap" rel="stylesheet">"
+</head>
+<body>
 
-body{
-    font-family: 'Montserrat', sans-serif;
+    <section class="header">
 
-}
+   
+    <header class="'container">
+       
+        <nav class="navbar"></nav>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a> </li>
+                <li><a href="products.html">Products</a> </li>
+                <li><a href="contact.html">Contact &#9993;</a> </li>
+            </ul>
+            <img class="shopCart" src="shopCart.jpg" alt="" width="80px" height="60px">
+            </nav>
+    </header>
+    <image class="hero" alt="">
+        <text class="hero-text">
+            <h1>
+                <strong class="webName">CRICKET SUPPLY</strong>
+            </h1>
+            <p class="subheading">
+                YOUR ONE STOP SHOP
+            </p>
+            <br>
+            <a href="products.html" class="btn">Explore Our Options &#8594</a>
+            <br>
+        </text>
+    </image>
+</section>
+<br>
+<main class="categories">
+    <div class="small-container">
+        <h2 class="title">Featured Products</h2>
+        <br>
+        <div class="row">
+            <div class="column">
+                <img src="featured1.jpeg" class="feat1" alt="">
+                <h3>GM Cricket Bat (3 pack)</h3>
+                <p>$125.00</p>
+            </div>
+            <div>
+                <img src="gladiShins.jpg" class="gladShins" alt="">
+                <h3>Gladiator Shinguards (2 pack)</h3>
+                <p>$35.00</p>
+        </div>
+    </div>
+   
+</main>
 
-.navbar {
-    display: flex;
-    align-items: center;
-    padding: 20px;
-}
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <img class="logo" src="webLogo.jpg" alt="">
+            <div class="footerColumn1">
+                
+            </div>
+            <div class="footerColumn2">
+                <h3>Cricket Supply</h3>
+                <p>Bringing cricket to your front door, no matter where you are.</p>
+        </div>
+        <div class="footerColumn3">
+                <h3 style="font-size: 20px;">Follow Us</h3>
+                <ul>
+                    <li><a href="https://www.instagram.com/sunny.ul/" aria-label="Instagram"><img src="InstagramLogo.jpg" style="width:80px; height:80px; margin-right: 9px;; " alt="" ></a> </li>
+                    <li><a href="https://www.youtube.com/watch?v=L9-CsjFtPc0" aria-label="YouTube" ><img src="youTubeLogo.jpg" class="youtubeLogo" alt=""> </a> </li>
+                </ul>
+    </div>
+</footer>
 
-.shopCart{
-  display: inline-block;
-  border: 1px solid #555;
-  min-width: 50px;
-  max-height: 60px;
-}
-
-nav{
-    flex: 1;
-    text-align: right;
-}
-nav ul{
-    display: inline-block;
-    list-style-type: none;
-    font-size: 25px;
-}
-nav ul li{
-    display: inline-block;
-    margin-right: 20px;
-}
-
-a{
-    text-decoration: none;
-    color: #543;
-}
-
-p{
-    color: #543;
-}
-
-.container {
-    max-width: 1000px;
-    margin: auto;
-    padding-left: 25px;
-    padding-right: 25px;
-}
-
-/* hero image */
-
-.hero{
-    background-image: url("hero.jpeg");
-    height: 750px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    width: 100%;
-  }
-  
-  .hero-text{
-    text-align: right;
-    position: absolute;
-    margin-top: 70px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-250%,-60%);
-    color: black;
-    font-size: 20px;
-    }
-
-  .webName {
-      margin-left: auto;
-      margin-right: auto;
-      width: 900px;
-  }
-
-.subheading {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    text-align: right;
-    color: grey;
-}
-
-.gladShins{
-    margin-left: 1px;
-}
-
-.logo{
-   min-width:140px;
-   max-height:144px;
-   padding: 1px;
-   margin-bottom: 0px;
-}
-
-.btn {
-    display: inline-block;
-    background: orange;
-    color: white;
-    padding: 10px 20px;
-    margin: 30px 0;
-    border-radius: 30px;
-    transition: background 0.5s;
-}
-
-.btn:hover{
-    background: #563433
-}
-
-
-
-.deal-img2{
-min-width:190px;
-max-height: 300px; 
-float:left;
-margin-right:20px;
-border: 5px solid #555;
-}
-
-.deal-img3{
-min-width:190px;
-max-height: 300px; 
-float:left;
-margin-right:20px;
-border: 5px solid #555;
-}
-
-.deal-img4{
-min-width:190px;
-max-height: 300px; 
-float:left;
-margin-right:20px;
-border: 5px solid #555;
-}
-
-.deal-img5{
-min-width:190px;
-max-height: 300px; 
-float:left;
-margin-right:20px;
-border: 5px solid #555;
-}
-
-.deal-img6{
-min-width:190px;
-max-height: 300px; 
-float:left;
-margin-right:20px;
-border: 5px solid #555;
-}
-
-.deal-img7{
-min-width:190px;
-max-height: 300px; 
-float:left;
-margin-right:20px;
-border: 5px solid #555;
-}
-
-.deal-img8{
-min-width:190px;
-max-height: 300px; 
-float:left;
-margin-right:20px;
-border: 5px solid #555;
-}
-
-.deal-img9{
-min-width:190px;
-max-height: 300px; 
-float:left;
-margin-right:20px;
-border: 5px solid #555;
-}
-
-.deal-img10{
-min-width:190px;
-max-height: 300px; 
-float:left;
-margin-right:20px;
-border: 5px solid #555;
-}
-
-.deal-img11{
-min-width:190px;
-max-height: 300px; 
-float:left;
-margin-right:20px;
-border: 5px solid #555; 
-}
-
-.deal-img12{
-min-width:190px;
-max-height: 300px; 
-float:left;
-margin-right:20px;
-border: 5px solid #555;
-}
-
- .row{
-    display:flex;
-}
-
-.categories {
-    margin: 50px 0;
-}
-
-.column{
-    float: left;
-    min-width: 190px;
-    margin-bottom: 20px;
-}
-
-.column img{
-    width: 80%;
-}
-
-.small-container{
-    max-width: 1080px;
-    margin:auto;
-    padding-left: 30px;
-    padding-right: 20px;
-}
-
-.feat1{
-    margin-top:80px;
-}
-
-.title{
-    text-align: center;
-    margin: 0 auto 80px;
-    position: relative;
-    line-height: 60px;
-    color: #555;
-    font-size: 25px;
-}
-
-.title::after{
-    content: '';
-    background: orange;
-    width: 80px;
-    height: 5px;
-    border-radius: 5px;
-    position: absolute;
-    bottom: 0;
-    left: 46%;
-    transform: translate(-900);
-}
-
-.deal-img{
-min-width:190px;
-max-height: 300px; 
-float:left;
-margin-right:20px;
-border: 5px solid #555;
-}
-
-.deal{
-    background: radial-gradient(#fff, #d6f7ff);
-    margin-top:10px;
-    margin-left: 20px;
-    padding: 30px 0;
-}
-
-
-
-.column2{
-    float: left;
-    min-width: 200px;
-    max-height:600px;
-}
-
-/* footer */
-
-.footer{
-    background: black;
-    color: #8a8a8a;
-    font-size:13px;
-    padding: 60px 0 20px;
-}
-
-.footer p{
-    color: lightgrey;
-    min-width: 10;
-}
-
-.footer h3{
-    font-size: 20;
-    color: white;
-    margin-bottom: 20px;   
-    min-width: 10;
-}
-
-.footerColumn1, .footerColumn2, .footerColumn3 {
-    min-width: 150px;
-    margin-bottom: 10px;
-}
-
-.footerColumn1{
-    flex-basis: 30%;
-}
-
-.footerColumn2{
-    flex:auto;
-    padding:0;
-    margin-right: 15%;
-    text-align: center;
-}
-
-.footerColumn3{
-    flex-basis: 30%;
-    text-align: right;
-    float: right;
-}
-
-.youtubeLogo{
-min-width:77px;
-max-height: 77px; 
-}
-
-.btnCart {
-    display: inline-block;
-    background: rgb(241, 132, 132);
-    color: black;
-    padding: 10px 20px;
-    margin: 30px 0;
-    border-radius: 30px;
-    transition: background .6s;
-}
-
-.btnCart:hover{
-    background: black;
-    color: white;
-}
+</body>
+</html>
